--- a/sass/grid/_grid-flex.scss
+++ b/sass/grid/_grid-flex.scss
@@ -83,6 +83,9 @@
         &-width-md-66{
           width: 66.6666666667%;
         }
+        &-width-md-20{
+          width: 20%;
+        }
     }
 
     @media (min-width: $mx-col-lg) {
